--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mayank Chutia</title>
+    <title>Meena</title>
 </head>
-<body style="margin: 0">
-<img src="DSC_0032.JPG" style="height: 100vh"/>
+<body style="background-image: url('download.png');background-size: cover;background-repeat:no-repeat;margin: 0">
 </body>
 </html>
