--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <title>Meena</title>
 </head>
-<body>
-    <video width="100vw" height="100vh" autoplay>
+<body style="
+    margin: 0;
+    overflow-y: hidden;
+">
+    <video height="100%" autoplay="" width="100%" style="overflow-y:hidden" loop>
   <source src="How your brain be like in bed trying to sleep at 3am on 9GAG.mp4" type="video/mp4">
 </video>
+
+
 </body>
 </html>
